--- a/carrinho.html
+++ b/carrinho.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho</title>
+    <link rel="stylesheet" href="./css/carrinho.css">
 </head>
 <body>
     <div class="navbar">
@@ -12,7 +13,7 @@
                 <a href="index.html" class="menu">Home</a>
             </li>
             <li>
-                <a href="sobre.html" class="menu">Sobre Nós</a>
+                <a href="sobreNos.html" class="menu">Sobre Nós</a>
             </li>
         </ul>
     </div>
