--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="row">
           <input type="tel" name="telefone" id="itelefone" placeholder="Insira seu Telefone" maxlength="11" minlength="9" required>
-          <input type="submit" value="Enviar">
+          <input type="submit" value="subscribe">
         </div>
       </form>
     </section>
